fixed yaml-cpp linking error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ list(APPEND LINK_LIBS
   ${catkin_LIBRARIES}
   ${PCL_LIBRARIES}
   ${GTEST_LIBRARIES}
-	${YAML_CPP_LIBRARIES}}
+  ${YAML_CPP_LIBRARIES}
   pthread
 )
 
