fixed problem with tests created when I separated the declarations and implementations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,8 +110,10 @@ add_definitions(${PCL_DEFINITIONS})
 
 #add_subdirectory(test)
 
-catkin_add_gtest(testImuIntegration test/testImuIntegration.cpp)
+catkin_add_gtest(testImuIntegration test/testImuIntegration.cpp ${SOURCES} ${HEADERS})
 target_link_libraries(testImuIntegration ${LINK_LIBS})
+catkin_add_gtest(testMarginalization test/testMarginalization.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(testMarginalization ${LINK_LIBS})
 
 add_executable(radar_velocity ${RAD_VEL_SRCS} ${SOURCES} ${HEADERS})
 target_link_libraries(radar_velocity
