reactivated other unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,12 +114,12 @@ add_definitions(${PCL_DEFINITIONS})
 
 #add_subdirectory(test)
 
-#catkin_add_gtest(testImuIntegration test/testImuIntegration.cpp ${SOURCES} ${HEADERS})
-#target_link_libraries(testImuIntegration ${LINK_LIBS})
-#catkin_add_gtest(testMarginalization test/testMarginalization.cpp ${SOURCES} ${HEADERS})
-#target_link_libraries(testMarginalization ${LINK_LIBS})
-#catkin_add_gtest(testGlobalImuCostFunction test/testGlobalImuCostFunction.cpp ${SOURCES} ${HEADERS})
-#target_link_libraries(testGlobalImuCostFunction ${LINK_LIBS})
+catkin_add_gtest(testImuIntegration test/testImuIntegration.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(testImuIntegration ${LINK_LIBS})
+catkin_add_gtest(testMarginalization test/testMarginalization.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(testMarginalization ${LINK_LIBS})
+catkin_add_gtest(testGlobalImuCostFunction test/testGlobalImuCostFunction.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(testGlobalImuCostFunction ${LINK_LIBS})
 catkin_add_gtest(testGlobalDoppler test/testGlobalDoppler.cpp ${SOURCES} ${HEADERS})
 target_link_libraries(testGlobalDoppler ${LINK_LIBS})
 
