added class for orientation error from the IMU ahrs filter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set( HEADERS
   ${INC_DIR}/VelocityMeasCostFunction.h
   ${INC_DIR}/ImuVelocityCostFunction.h
   ${INC_DIR}/GlobalImuVelocityCostFunction.h
+  ${INC_DIR}/AHRSOrientationCostFunction.h
   ${INC_DIR}/ImuIntegrator.h
   ${INC_DIR}/MarginalizationError.h
 	${INC_DIR}/QuaternionParameterization.h
@@ -79,6 +80,7 @@ set( SOURCES
   ${SRC_DIR}/VelocityMeasCostFunction.cpp
   ${SRC_DIR}/ImuVelocityCostFunction.cpp
   ${SRC_DIR}/GlobalImuVelocityCostFunction.cpp
+  ${SRC_DIR}/AHRSOrientationCostFuncton.cpp
   ${SRC_DIR}/ImuIntegrator.cpp
   ${SRC_DIR}/MarginalizationError.cpp
   ${SRC_DIR}/QuaternionParameterization.cpp
