switched to absolute orientation rather than relative

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ set( HEADERS
   ${INC_DIR}/ImuVelocityCostFunction.h
   ${INC_DIR}/GlobalImuVelocityCostFunction.h
   ${INC_DIR}/AHRSOrientationCostFunction.h
+  ${INC_DIR}/AHRSYawCostFunction.h
   ${INC_DIR}/ImuIntegrator.h
   ${INC_DIR}/MarginalizationError.h
 	${INC_DIR}/QuaternionParameterization.h
@@ -81,6 +82,7 @@ set( SOURCES
   ${SRC_DIR}/ImuVelocityCostFunction.cpp
   ${SRC_DIR}/GlobalImuVelocityCostFunction.cpp
   ${SRC_DIR}/AHRSOrientationCostFunction.cpp
+  ${SRC_DIR}/AHRSYawCostFunction.cpp
   ${SRC_DIR}/ImuIntegrator.cpp
   ${SRC_DIR}/MarginalizationError.cpp
   ${SRC_DIR}/QuaternionParameterization.cpp
@@ -126,6 +128,8 @@ add_definitions(${PCL_DEFINITIONS})
 #target_link_libraries(testGlobalDoppler ${LINK_LIBS})
 catkin_add_gtest(testAHRSOrientationCostFunction test/testAHRSOrientationCostFunction ${SOURCES} ${HEADERS})
 target_link_libraries(testAHRSOrientationCostFunction ${LINK_LIBS})
+#catkin_add_gtest(testAHRSYawCostFunction test/testAHRSYawCostFunction ${SOURCES} ${HEADERS})
+#target_link_libraries(testAHRSYawCostFunction ${LINK_LIBS})
 
 add_executable(radar_velocity ${RAD_VEL_SRCS} ${SOURCES} ${HEADERS})
 target_link_libraries(radar_velocity
