--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,20 +119,20 @@ add_definitions(${PCL_DEFINITIONS})
 
 #add_subdirectory(test)
 
-catkin_add_gtest(testImuIntegration test/testImuIntegration.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(testImuIntegration ${LINK_LIBS})
+#catkin_add_gtest(testImuIntegration test/testImuIntegration.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(testImuIntegration ${LINK_LIBS})
 catkin_add_gtest(testMarginalization test/testMarginalization.cpp ${SOURCES} ${HEADERS})
 target_link_libraries(testMarginalization ${LINK_LIBS})
-catkin_add_gtest(testGlobalImuCostFunction test/testGlobalImuCostFunction.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(testGlobalImuCostFunction ${LINK_LIBS})
-catkin_add_gtest(testGlobalDoppler test/testGlobalDoppler.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(testGlobalDoppler ${LINK_LIBS})
-catkin_add_gtest(testAHRSOrientationCostFunction test/testAHRSOrientationCostFunction ${SOURCES} ${HEADERS})
-target_link_libraries(testAHRSOrientationCostFunction ${LINK_LIBS})
-catkin_add_gtest(testAHRSYawCostFunction test/testAHRSYawCostFunction ${SOURCES} ${HEADERS})
-target_link_libraries(testAHRSYawCostFunction ${LINK_LIBS})
-catkin_add_gtest(testBodyDopplerSacProblem test/testBodyDopplerSacProblem.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(testBodyDopplerSacProblem ${LINK_LIBS})
+#catkin_add_gtest(testGlobalImuCostFunction test/testGlobalImuCostFunction.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(testGlobalImuCostFunction ${LINK_LIBS})
+#catkin_add_gtest(testGlobalDoppler test/testGlobalDoppler.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(testGlobalDoppler ${LINK_LIBS})
+#catkin_add_gtest(testAHRSOrientationCostFunction test/testAHRSOrientationCostFunction ${SOURCES} ${HEADERS})
+#target_link_libraries(testAHRSOrientationCostFunction ${LINK_LIBS})
+#catkin_add_gtest(testAHRSYawCostFunction test/testAHRSYawCostFunction ${SOURCES} ${HEADERS})
+#target_link_libraries(testAHRSYawCostFunction ${LINK_LIBS})
+#catkin_add_gtest(testBodyDopplerSacProblem test/testBodyDopplerSacProblem.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(testBodyDopplerSacProblem ${LINK_LIBS})
 
 add_executable(radar_velocity ${RAD_VEL_SRCS} ${SOURCES} ${HEADERS})
 target_link_libraries(radar_velocity
