converting to use total least squares for doppler error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,16 +139,16 @@ add_definitions(${PCL_DEFINITIONS})
 #target_link_libraries(testMarginalization ${LINK_LIBS})
 #catkin_add_gtest(testGlobalImuCostFunction test/testGlobalImuCostFunction.cpp ${SOURCES} ${HEADERS})
 #target_link_libraries(testGlobalImuCostFunction ${LINK_LIBS})
-#catkin_add_gtest(testGlobalDoppler test/testGlobalDoppler.cpp ${SOURCES} ${HEADERS})
-#target_link_libraries(testGlobalDoppler ${LINK_LIBS})
+catkin_add_gtest(testGlobalDoppler test/testGlobalDoppler.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(testGlobalDoppler ${LINK_LIBS})
 #catkin_add_gtest(testAHRSOrientationCostFunction test/testAHRSOrientationCostFunction ${SOURCES} ${HEADERS})
 #target_link_libraries(testAHRSOrientationCostFunction ${LINK_LIBS})
 #catkin_add_gtest(testAHRSYawCostFunction test/testAHRSYawCostFunction ${SOURCES} ${HEADERS})
 #target_link_libraries(testAHRSYawCostFunction ${LINK_LIBS})
 #catkin_add_gtest(testBodyDopplerSacProblem test/testBodyDopplerSacProblem.cpp ${SOURCES} ${HEADERS})
 #target_link_libraries(testBodyDopplerSacProblem ${LINK_LIBS})
-catkin_add_gtest(testGlobalVelocityMeas test/testGlobalVelocityMeas.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(testGlobalVelocityMeas ${LINK_LIBS})
+#catkin_add_gtest(testGlobalVelocityMeas test/testGlobalVelocityMeas.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(testGlobalVelocityMeas ${LINK_LIBS})
 
 add_executable(radar_velocity ${RAD_VEL_SRCS} ${SOURCES} ${HEADERS})
 target_link_libraries(radar_velocity
