switched jacobian to linear algebra operations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,10 +139,10 @@ add_definitions(${PCL_DEFINITIONS})
 #target_link_libraries(testMarginalization ${LINK_LIBS})
 #catkin_add_gtest(testGlobalImuCostFunction test/testGlobalImuCostFunction.cpp ${SOURCES} ${HEADERS})
 #target_link_libraries(testGlobalImuCostFunction ${LINK_LIBS})
-catkin_add_gtest(testBodyDoppler test/testBodyDoppler.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(testBodyDoppler ${LINK_LIBS})
-#catkin_add_gtest(testGlobalDoppler test/testGlobalDoppler.cpp ${SOURCES} ${HEADERS})
-#target_link_libraries(testGlobalDoppler ${LINK_LIBS})
+#catkin_add_gtest(testBodyDoppler test/testBodyDoppler.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(testBodyDoppler ${LINK_LIBS})
+catkin_add_gtest(testGlobalDoppler test/testGlobalDoppler.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(testGlobalDoppler ${LINK_LIBS})
 #catkin_add_gtest(testAHRSOrientationCostFunction test/testAHRSOrientationCostFunction ${SOURCES} ${HEADERS})
 #target_link_libraries(testAHRSOrientationCostFunction ${LINK_LIBS})
 #catkin_add_gtest(testAHRSYawCostFunction test/testAHRSYawCostFunction ${SOURCES} ${HEADERS})
