added necessary packages for rosbag reading

--- a/eval_tools/CMakeLists.txt
+++ b/eval_tools/CMakeLists.txt
@@ -4,10 +4,13 @@ set(CMAKE_CXX_STANDARD 11)
 
 find_package(Ceres REQUIRED)
 find_package(GFlags REQUIRED)
+find_package(roscpp REQUIRED)
+find_package(rosbag REQUIRED)
 
 list(APPEND LINK_LIBS
   ${CERES_LIBRARIES}
   ${GTEST_LIBRARIES}
+  ${rosbag_LIBRARIES}
 )
 
 set( INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
@@ -16,22 +19,22 @@ set( SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../src)
 set(HEADERS
   ${INC_DIR}/DataTypes.h
   ${INC_DIR}/ErrorInterface.h
-  ${INC_DIR}/GlobalImuVelocityCostFunction.h
   ${INC_DIR}/GlobalVelocityMeasCostFunction.h
   ${INC_DIR}/QuaternionParameterization.h)
 
 set(SRCS
-  ${SRC_DIR}/GlobalImuVelocityCostFunction.cpp
   ${SRC_DIR}/GlobalVelocityMeasCostFunction.cpp
   ${SRC_DIR}/QuaternionParameterization.cpp)
 
 include_directories(
   ${CERES_INCLUDE_DIRS},
   ${GFLAGS_INCLUDE_DIRS},
+  ${roscpp_INCLUDE_DIRS},
+  ${rosbag_INCLUDE_DIRS},
   ${INC_DIR})
 
-add_executable(alignByVel alignAndEvaluate.cpp ${SRCS} ${HEADERS})
-target_link_libraries(alignByVel ${LINK_LIBS})
+add_executable(alignAndEvaluate alignAndEvaluate.cpp ${SRCS} ${HEADERS})
+target_link_libraries(alignAndEvaluate ${LINK_LIBS})
 
 #add_executable(alignByImu alignByImu.cpp ${SRCS} ${HEADERS})
 #target_link_libraries(alignByImu ${LINK_LIBS})
