added point cluster cost function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set( HEADERS
   ${INC_DIR}/GlobalImuVelocityCostFunction.h
   ${INC_DIR}/AHRSOrientationCostFunction.h
   ${INC_DIR}/AHRSYawCostFunction.h
+  ${INC_DIR}/PointClusterCostFunction.h
   ${INC_DIR}/ImuIntegrator.h
   ${INC_DIR}/MarginalizationError.h
 	${INC_DIR}/QuaternionParameterization.h
@@ -101,6 +102,7 @@ set( SOURCES
   ${SRC_DIR}/GlobalImuVelocityCostFunction.cpp
   ${SRC_DIR}/AHRSOrientationCostFunction.cpp
   ${SRC_DIR}/AHRSYawCostFunction.cpp
+  ${SRC_DIR}/PointClusterCostFunction.cpp
   ${SRC_DIR}/ImuIntegrator.cpp
   ${SRC_DIR}/MarginalizationError.cpp
   ${SRC_DIR}/QuaternionParameterization.cpp
