switching to c++14 and pcl 1.10 standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,18 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(goggles)
-set(CMAKE_CXX_STANDARD 11)
 
-## Add support for C++11, supported in ROS Kinetic and newer
-add_definitions(-std=c++11)
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX_14)
+if(COMPILER_SUPPORTS_CXX_14)
+  set(CMAKE_CXX_STANDARD 14)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+  set(CMAKE_CXX_FLAGS "-std=c++14")
+else()
+  message(FATAL_ERROR "c++ 14 not supported")
+endif()
+
+## Add support for C++14, supported in ROS Kinetic and newer
+add_definitions(-std=c++14)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
