--- a/package.xml
+++ b/package.xml
@@ -45,19 +45,21 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-	<build_depend>tf</build_depend>
+  <build_depend>tf</build_depend>
   <build_depend>tf_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>ceres-solver</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
-	<run_depend>tf</run_depend>
+  <run_depend>tf</run_depend>
   <run_depend>tf_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>ceres-sovler</run_depend>
 
 </package>
